/**
 * Classe RoomType fa vedere i tipi di camera
 */
    public enum RoomType {
        KITCHEN, BEDROOM, BATHROOM, LIVING_ROOM;
    }
